Fix styling on tablet devices
modified:   dist/main.js
modified:   src/style.css

--- a/src/style.css
+++ b/src/style.css
@@ -65,12 +65,8 @@ footer {
 
 .book-card {
   width: 340px;
+  min-width: 340px;
   max-width: 397px;
-}
-
-.song-card {
-  width: 600px;
-  /* max-width: 397px; */
 }
 
 li {
@@ -184,8 +180,9 @@ header {
 }
 
 .grid {
-  display: grid;
-  gap: var(--gap, 1rem);
+  display: inline-grid;
+  grid-template-columns: repeat(3, 1fr);
+  gap: 1rem;
 }
 
 .text-center {
@@ -350,6 +347,10 @@ li a:hover {
   .image-song {
     width: 100%;
     height: auto;
+  }
+
+  .items-container {
+    justify-content: center;
   }
 }
 
